syntax = "proto3";

option go_package = "/notes";

package notes;

message Note{
    string Date = 1;
    string Title = 2;
    string Content = 3;
}

message FetchByTitle{
    string Title = 1;
}

message ListTitles{}

message ListTitlesResponse {
    repeated string titles = 1;
}

message ListNotes{}

message AllNotes{
    repeated Note notes = 1;
}

service NoteRequest{
    rpc GetNote(FetchByTitle) returns (Note);
    rpc CreateNote(Note) returns (FetchByTitle);
    rpc ListAllTitles(ListTitles) returns (ListTitlesResponse);
    rpc ListAllNotes(ListNotes) returns (AllNotes);
    rpc StreamNotes(stream ListNotes) returns (stream Note);
}